--- a/package.json
+++ b/package.json
@@ -8,53 +8,53 @@
     "test": "NODE_ENV=production mocha './tests/**/*.spec.js' --compilers js:babel-core/register",
     "clean": "rimraf dist",
     "start": "node devServer.js",
-    "tunnel": "browser-sync start --proxy localhost:7770 --tunnel wesbos"
+    "tunnel": "browser-sync start --proxy localhost:5000"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/wesbos/Learn-Redux.git"
+    "url": "https://github.com/virajs07/todoRedux.git"
   },
   "author": "Viraj Sinha",
   "license": "MIT",
   "homepage": "https://github.com/virajs07",
   "dependencies": {
     "babel-core": "^6.7.7",
-    "babel-eslint": "^6.0.4",
-    "babel-loader": "^6.2.4",
+    "babel-eslint": "^7.2.3",
+    "babel-loader": "^7.0.0",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-object-rest-spread": "^6.6.5",
     "babel-plugin-transform-react-display-name": "^6.5.0",
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
-    "css-loader": "^0.23.1",
-    "eslint": "^2.9.0",
-    "eslint-plugin-babel": "^3.2.0",
-    "eslint-plugin-react": "^5.0.1",
+    "css-loader": "^0.28.0",
+    "eslint": "^3.19.0",
+    "eslint-plugin-babel": "^4.1.1",
+    "eslint-plugin-react": "^6.10.3",
     "express": "^4.13.4",
-    "raven-js": "^2.3.0",
+    "raven-js": "^3.14.2",
     "react": "^15.0.2",
     "react-addons-css-transition-group": "^15.0.2",
     "react-dom": "^15.0.2",
-    "react-redux": "^4.4.5",
-    "react-router": "^2.4.0",
+    "react-redux": "^5.0.4",
+    "react-router": "^4.1.1",
     "react-router-redux": "^4.0.4",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.4",
     "redbox-react": "^1.2.3",
     "redux": "^3.5.2",
     "rimraf": "^2.5.2",
-    "style-loader": "^0.13.1",
+    "style-loader": "^0.16.1",
     "stylus": "^0.54.5",
-    "stylus-loader": "^2.0.0",
-    "webpack": "^1.13.0",
+    "stylus-loader": "^3.0.1",
+    "webpack": "^2.4.1",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.10.0"
   },
   "devDependencies": {
     "expect": "^1.18.0",
-    "expect-jsx": "^2.5.1",
-    "mocha": "^2.4.5",
+    "expect-jsx": "^3.0.0",
+    "mocha": "^3.3.0",
     "react-addons-test-utils": "^15.0.2"
   }
 }
