changing index.html for gh-pages

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "node devServer.js",
     "tunnel": "browser-sync start --proxy localhost:5000",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "homepage": "https://virajs07.github.io/TodoRedux",
   "repository": {
