--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "test": "NODE_ENV=production mocha './tests/**/*.spec.js' --compilers js:babel-core/register",
     "clean": "rimraf dist",
     "start": "node devServer.js",
-    "tunnel": "browser-sync start --proxy localhost:5000"
+    "tunnel": "browser-sync start --proxy localhost:5000",
+    "predeploy": "npm run build"
   },
+  "homepage": "https://virajs07.github.io/todoRedux",
   "repository": {
     "type": "git",
     "url": "https://github.com/virajs07/todoRedux.git"
@@ -54,6 +56,7 @@
   "devDependencies": {
     "expect": "^1.18.0",
     "expect-jsx": "^3.0.0",
+    "gh-pages": "^0.12.0",
     "mocha": "^3.3.0",
     "react-addons-test-utils": "^15.0.2"
   }
